--- a/app/views/layouts/main_view.html.erb
+++ b/app/views/layouts/main_view.html.erb
@@ -8,33 +8,21 @@
 </head>
 <body>
 
-<div class="row">
-  <div class="container">
-    <div class="page-header">
-      <h1>Military Order
-        <small>// a.emchik <%= Time.now.year %> ©</small>
-      </h1>
-    </div>
-    <ul class="nav nav-tabs">
-      <li <%= 'class = "active"'.html_safe if @current_tab == :timetables %>>
-        <a href='<%= "#{request.protocol}#{request.host_with_port}" %>'>Расписание</a></li>
-      <li <%= 'class = "active"'.html_safe if @current_tab == :soldiers %>>
-        <a href='<%= "#{request.protocol}#{request.host_with_port}/soldiers" %>'>Состав</a></li>
-      <li <%= 'class = "active"'.html_safe if @current_tab == :settings %>><a href="#">Настройки</a></li>
-    </ul>
-    <div class='col-md-10'>
-      <br>
-      <%= yield %>
-    </div>
-    <div class='col-md-2'>
-      <br>
-      <ul class="nav nav-pills nav-stacked">
-        <% Date::MONTHNAMES.slice(1,12).each_with_index do |m, index| %>
-            <li <%='class = "active"'.html_safe if index + 1 == Date.today.month %>><a href="#"><%= m %></a></li>
-        <% end %>
-      </ul>
-    </div>
+<div class="container">
+  <div class="page-header">
+    <h1>Military Order
+      <small># сегодня: <%= Russian.strftime(Time.now, '%d %B %Y') %></small>
+    </h1>
   </div>
+  <ul class="nav nav-tabs">
+    <li <%= 'class = "active"'.html_safe if @current_tab == :timetables %>>
+      <a href='<%= "#{request.protocol}#{request.host_with_port}" %>'>Расписание</a></li>
+    <li <%= 'class = "active"'.html_safe if @current_tab == :soldiers %>>
+      <a href='<%= "#{request.protocol}#{request.host_with_port}/soldiers" %>'>Состав</a></li>
+    <li <%= 'class = "active"'.html_safe if @current_tab == :settings %>><a href="#">Настройки</a></li>
+  </ul>
+  <br>
+  <%= yield %>
 </div>
 
 </body>
