added devise sign_in. a few rout problems

--- a/app/views/layouts/main_view.html.erb
+++ b/app/views/layouts/main_view.html.erb
@@ -21,6 +21,12 @@
       <a href='<%= "#{request.protocol}#{request.host_with_port}/soldiers" %>'>Состав</a></li>
     <li <%= 'class = "active"'.html_safe if @current_tab == :settings %>>
       <a href='<%= "#{request.protocol}#{request.host_with_port}/settings" %>'>Настройки</a></li>
+    <li style="float: right">
+      <% if user_signed_in? %>
+          <form method="post">
+            <%= link_to('ВЫЙТИ', destroy_user_session_path, :method => 'delete', class: 'btn btn-warning') %>
+          </form>
+      <% end %></li>
   </ul>
   <br>
   <%= yield %>
@@ -28,4 +34,6 @@
 
 </body>
 </html>
+
+
 
