--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -33,7 +33,9 @@
         <th><%= s.surname + ' ' + s.name[0] + '.' + s.patronymic[0] + '.' %></th>
         <% 1.upto @current_date.end_of_month.day do |day| %>
             <% current_day = @current_date + day.day - 1%>
-            <th <%= "style='background-color: #{@color_day_off}'".html_safe if current_day.saturday? || current_day.sunday? %>></th>
+            <th <%= "style='background-color: #{@color_day_off}'".html_safe if current_day.saturday? || current_day.sunday? %>>
+              <%= link_to 'h', controller: 'schedules', action: 'new', date: current_day, soldier_id: s.id  %>
+            </th>
         <% end %>
       </tr>
   <% end %>
