--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,1 +1,15 @@
 blablabla
+
+<!--<div class="input-append color" data-color="rgb(255, 146, 180)" data-color-format="rgb">-->
+  <!--<input type="text" class="span2" value="">-->
+  <!--<span class="add-on"><i style="background-color: rgb(255, 146, 180)"></i></span>-->
+<!--</div>-->
+
+<a href="#" class="btn small" id="colorpicker" data-color-format="hex" data-color="rgb(255, 255, 255)">Change background color</a>
+
+
+<script type="text/javascript">
+    $('#colorpicker').colorpicker()
+</script>
+
+
