added reset password (magic with devise gem)

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -2,6 +2,8 @@
 
 <%= link_to 'Сменить цвет выходных', '#', class: 'btn btn-primary' %>
 
+<%= link_to "Change your password", edit_user_registration_path %>
+
 
 <script type="text/javascript">
     $('#colorpicker').colorpicker()
