--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(action: action_name) do %>
+<%= form_tag(action_name) do %>
 
     <%= hidden_field(:lesson, :date, value: @lesson.date) %>
     <%= hidden_field(:lesson, :soldier_id, value: @lesson.soldier_id) %>
