--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -33,12 +33,74 @@
         <th><%= s.surname + ' ' + s.name[0] + '.' + s.patronymic[0] + '.' %></th>
         <% 1.upto @current_date.end_of_month.day do |day| %>
             <% current_day = @current_date + day.day - 1 %>
-            <%= state_of_cell(:th, current_day, s.id)%>
-          <% end %>
+            <%= state_of_cell(:th, current_day, s.id) %>
+        <% end %>
       </tr>
   <% end %>
   </tbody>
 </table>
+<hr>
+<div class="row">
+  <div class="col-lg-9">
+    <h3>Статистика за <%= Russian.strftime(@current_date, '%B').mb_chars.downcase %> месяц:</h3>
+    <!-- Table -->
+    <table class="table table-striped ">
+      <thead>
+      <tr>
+        <th>звание & ФИО</th>
+        <th><span style="float: right">Кол-во пар</span></th>
+        <th><span style="float: right">Кол-во нарядов</span></th>
+        <th><span style="float: right">Нарядов пт-сб</span></th>
+        <th><span style="float: right">Нарядов сб-вс</span></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @soldiers.each do |s| %>
+          <tr>
+            <th>
+              <span style="color: #cfcfcf"><%= Rank.find(s.rank_id).title + ' ' %></span>
+              <%= s.surname + ' ' + s.name[0] + '.' + s.patronymic[0] + '.' %>
+            </th>
+            <th>
+              <span style="float: right"><%= count_lessons(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
+            </th>
+            <th>
+              <span style="float: right"><%= count_patrols(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
+            </th>
+            <th>
+              <span style="float: right"><%= count_patrols_fr_sat(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
+            </th>
+            <th>
+              <span style="float: right"><%= count_patrols_sat_sun(@current_date.beginning_of_month, @current_date.end_of_month, s.id) %></span>
+            </th>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-lg-3">
+    <div class="well">
+      <h4>Загрузить табл как XML</h4>
+      <hr>
+      <h4>Легенда</h4>
+      <!-- Table -->
+      <table class="table">
+        <thead>
+        <tr>
+          <th>назначение</th>
+          <th>отображение</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <th>d</th>
+          <th>d</th>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
 
 
@@ -53,7 +115,7 @@
             var soldier_id = $(this).attr('data-soldier-id');
             var date = $(this).attr('data-date');
             $("#dialog").load('/timetables/ajax_load_form', {soldier_id: soldier_id, date: date}).dialog();
-         }
+        }
 
         function edit_handler() {
             alert('edit');
