creating new and edit methods

--- a/app/views/timetables/_form.html.erb
+++ b/app/views/timetables/_form.html.erb
@@ -1,4 +1,7 @@
-<%= form_tag(action_name) do %>
+<%= form_tag(action: action_name) do %>
+
+    <h4><%=kind_of_action(action_name)%></h4>
+    <hr>
 
     <%= hidden_field(:lesson, :date, value: @lesson.date) %>
     <%= hidden_field(:lesson, :soldier_id, value: @lesson.soldier_id) %>
