--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -80,7 +80,15 @@
   </div>
   <div class="col-lg-3">
     <div class="well">
-      <h4>Загрузить табл как XML</h4>
+      <div class="row">
+        <div class="col-lg-4">
+          <h4>Скачать</h4>
+        </div>
+        <div class="col-lg-8">
+          <%= link_to image_tag('excel.png', size: '60x60'), timetables_path(format: 'csv', year: @current_date.year, month: @current_date.month) %>
+          <%= link_to image_tag('csv.png', size: '60x60'), timetables_path(format: 'csv', year: @current_date.year, month: @current_date.month) %>
+        </div>
+      </div>
       <hr>
       <h4>Легенда</h4>
       <!-- Table -->
